<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

<TextView
    android:id="@+id/tempoG"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:textAlignment="center"
    android:layout_above="@+id/haivintox"
    android:layout_marginBottom="10dp"
    android:text="@string/play_time"
    android:contentDescription="@string/play_time"
    android:textSize="35sp"
    android:textColor="@color/grigio"
    />
  <TextView android:id="@+id/haivintox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="35dp"
    android:layout_above="@+id/xx"
    android:text="@string/you_win"
      android:contentDescription="@string/you_win"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:textColor="@color/teal_700"
    android:textSize="20sp"
    android:textStyle="bold|italic"/>

    <ImageView
        android:id="@+id/xx"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/xsenzabordo"
        android:contentDescription="@string/croce"
        />


    <Button
        android:id="@+id/winhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/winplay"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/home"
        android:textSize="30sp" />


    <Button
        android:id="@+id/winplay"
        android:contentDescription="@string/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/xx"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/play_again"
        android:textSize="30sp" />


</RelativeLayout>