<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient3">



    <ImageView
        android:id="@+id/tab1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/h33"
        android:layout_centerInParent="true"
        android:contentDescription="@string/tabella"
        />


    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/col3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tab1"
        android:layout_marginBottom="20dp"
        android:fontFamily="casual"
        android:text="@string/for_example_if_the_first_player_puts_the_x_in_the_lower_left"
        android:contentDescription="@string/for_example_if_the_first_player_puts_the_x_in_the_lower_left"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/acqua_scuro"
        android:textSize="28sp"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tab1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/next"
        android:contentDescription="@string/next"/>
    <ImageButton
        android:id="@+id/previous"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/next"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/previous"
        android:contentDescription="@string/previous"/>

</RelativeLayout>