<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <TextView
        android:id="@+id/haivintoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/lostp"
        android:text="@string/you_lost"
        android:contentDescription="@string/you_lost"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/teal_700"
        android:textSize="20sp"

        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/lostp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/lostp2"
        android:contentDescription="@string/you_lost"
        />


    <Button
        android:id="@+id/winhomeolost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winplayolost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/home"
        android:contentDescription="@string/home"
        android:textSize="30sp" />

    <Button
        android:id="@+id/winplayolost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lostp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/play_again"
        android:contentDescription="@string/play_again"
        android:textSize="30sp" />


</RelativeLayout>